Generic Browser - fix collapsed row height

--- a/modules/Utils/GenericBrowser/theme/default.css
+++ b/modules/Utils/GenericBrowser/theme/default.css
@@ -749,6 +749,9 @@ div.expandable.collapsed.exceedsHeight {
     height: 17px !important;
     border-bottom: 1px dotted red;
 }
+div.expandable p {
+    margin-top: 0;
+}
 div.expandable.expanded {
     white-space: normal;
 }
